--- a/src/pages/Home/Chef.css
+++ b/src/pages/Home/Chef.css
@@ -1,13 +1,25 @@
 .customWidth{
-   width: 30%; 
    transition: all 0.6s;
    cursor: pointer;
 }
 .customWidth:hover{
     transform: translateY(-10px);
 }
-@media only screen and (max-width: 600px) {
+.chefs-item-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:30px;
+}
+@media only screen and (max-width: 576px) {
+    .chefs-item-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
     .customWidth{
-        width: 90%; 
+       margin: 0 30px;
      }
+}
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .chefs-item-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
